# rp2_runtime_example

./: .gitignore  README.md
0_firmware/: CMakeLists.txt  hardware_io.c  hardware_io.h  main.c  transport_wifi_config.h  version.h.in
0_firmware/callbacks/: fpga_callbacks.c  fpga_callbacks.h  gpio_callbacks.c  rpc_callbacks.c  rpc_callbacks.h
0_firmware/sens/: note.txt
0_firmware/src/: init_system.c  init_system.h  testbench.c  testbench.h  transport.h  transport_usb.c
1_api_python/: .gitignore  README.md  devenv.nix  pyproject.toml
1_api_python/api/: __init__.py  data_api.py  data_api_test.py  fpga_api.py  fpga_api_test.py  helper.py  helper_test.py  interface.py  lsl.py  lsl_test.py  mcu_api.py  mcu_api_start_daq_test.py  mcu_api_test.py
1_api_python/api/src/: _helper.py  _helper_test.py  _interface_serial.py  _interface_wifi.py  _interface_wifi_test.py  _live_visualizer.py  _lsl.py  _lsl_test.py
1_api_python/scripts/: benchmark.py  lsl_mcu.py  plot_data.py  run_daq.py  run_daq_wifi.py  use_fpga.py
2_api_c/: stream_test.c
3_digital_twin/: README.md  digital_twin.py  example.py  h5_handler.py  h5_handler_test.py  hardware_specific_functions.py  lsl_handler.py  lsl_handler_test.py  pyproject.toml
firmware/: CMakeLists.txt  hardware_io.c  hardware_io.h  main.c
firmware/callbacks/: gpio_callbacks.c  rpc_callbacks.c
firmware/src/: init_system.c
python_api/: .gitignore
python_api/api/: interface.py  lsl.py  mcu_api.py  mcu_api_test.py  mcu_conv.py
python_api/scripts/: lsl_mcu.py  plot_data.py
