[build-system]
requires = ["hatchling", "wheel"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.sdist]
where = ["."]
include = ["api"]
exclude = ['scripts', 'test_data', 'data', 'docs', '**/*_test.py']
namespaces = false


[tool.hatch.build.targets.wheel]
packages = ["api"]
exclude = ['scripts', 'test_data', 'data', 'docs', '**/*_test.py']
only-packages = true


[project]
name = "rp2_runtime_example"
version = "0.0.1"
description = "A Python API for handling an embedded system using RPi RP2xxx"
requires-python = ">=3.13"
dependencies = [
    "pyserial>=3.5",
    "numpy>=2.3.4",
    "h5py>=3.15.1",
    "pylsl>=1.17.6",
    "psutil>=7.1.3",
    "vispy>=0.16.0",
    "glfw>=2.10.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "build",
    "hatch",
    "pytest>=8.4.2",
    "matplotlib>=3.10.7",
    "snakeviz>=2.2.2"
]
